# light

./: Cargo.toml
scenes/: scene0.json
src/: algebra.rs  camera.rs  color.rs  geometry.rs  lib.rs  light.rs  loader.rs  main.rs  material.rs  object.rs  ray.rs  render.rs  scene.rs  shape.rs  spectrum.rs  vec3.rs
