[package]
name = "light"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
image = "0.25.1"
glm = { version = "0.18.0", package = "nalgebra-glm" }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
